# PorosAgent-Simulations

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.ref/: C.cif  CuInP2S6.cif  Ecurve_1d.in  MoS2.cif  cips_monolayer.cif  cips_monolayer.data
config/: experience.md  llm_config.yaml  prompts.yaml  prompts_default.yaml  rag_config.yaml
core/: __init__.py  agent.py  cli.py  context.py  rag.py  runner.py  tools.py
core/retrievers/: __init__.py  bm25.py  gemini.py  vector.py
core/telemetry/: __init__.py
data/corpus/atomate2/: chunks.json
data/corpus/deepmd/: chunks.json
data/corpus/dpdata/: chunks.json
data/corpus/dpgen/: chunks.json
data/corpus/dpgen_docs/: chunks.json
data/corpus/jobflow/: chunks.json
data/corpus/jobflow_remote/: chunks.json
data/corpus/vasp/: chunks.json
data/docs/deepmd-kit/: api_op.md  ase.md  backend.md  build-conda.md  change-bias.md  coding-conventions.md  compress.md  create-a-model-pt.md  create-a-model-tf.md  credits.md  cxx.md  dpa2.md  dpa3.md  dplr.md  dprc.md  easy-install-dev.md  easy-install.md  env.md  finetuning.md  freeze.md  gpu-limitations.md  gromacs.md  howtoset_num_nodes.md  index.md  install-from-c-library.md  install-from-source.md  install-lammps.md  ipi.md  lammps-command.md  license.md  linear.md  multi-task-training.md  nodejs.md  overall.md  pairtab.md  (+23 more)
remote_jobs/: __init__.py  _batch_eval.py  _deepmd.py  _efield_calculator.py  _patches.py  jobs.py  pyproject.toml
scripts/: analyze_steps.py  build_corpus.py  chunk_with_context.mjs  clean_myst.py  monitor.py  package-lock.json  package.json
(+895 files in other folders)
